# cpp-course-fluid-hw2

./: CMakeLists.txt  Dockerfile  README.md  fluid.cpp  fluid_original.cpp
include/: Double.h  FastFixed.h  Fixed.h  Float.h  Simulator.h  Simulator_specialization.h  Types.h
